app/styles/scss/_components/_card.scss
.card-list {
  margin-left: ($space-md * -1);
  margin-top: ($space-md * -1);
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  @include mq-lg {
    flex-direction: row;
  }
  &__item {
    width: 100%;
    padding-left: $space-md;
    padding-top: $space-md;
    &--half {
      @include mq-lg {
        flex: 1 0 33%;
      }
    }
  }
}

.media {
  width: 100%;
  height: 100%;
  // display: flex;
  // flex-direction: column;
  background: #fff;
  @include shadow--y;
  @include mq-lg {
    &--row {
      display: flex;
      flex-direction: row;
      align-items: center;
    }
  }
  &__icon {
    display: none;
    @include mq-lg {
      margin-left: $space-lg;
      padding: $space-md;
      width: 5rem;
      height: 5rem;
      display: flex;
      align-items: center;
      flex: 0 0 auto;
      color: $white;
      border-radius: 50%;
      background: $tertiary;
    }
  }
  &__img {
    display: block;
    position: relative;
    width: 100%;
    @include mq-md {
      &::after {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        background: rgba($secondary, 0.3);
        opacity: 0;
        transition: opacity 0.2s;
        will-change: opacity;
      }
      &:hover {
        &::after {
          opacity: 1;
        }
      }
    }
    & > img {
      width: 100%;
    }
  }
  &__body {
    padding: $space-lg;
    // font-size: 1rem;
  }
  &__title {
    & > a {
      text-decoration: none;
    }
  }
  &__footer {
    text-align: right;
  }
  &__date {
    font-size: $font-scale-xs;
    color: $grey-400
  }
}

